--- a/css/styles.css
+++ b/css/styles.css
@@ -363,6 +363,7 @@ button:focus {
 }
 
 .portfolio-cart-info {
+  width: 100%;
   padding: 32px 16px;
   border: 1px solid var(--color-cornflower);
   border-top: none;
@@ -370,7 +371,7 @@ button:focus {
 }
 
 .carts-img {
-  width: 288px;
+  width: 100%;
   height: 280px;
 }
 
@@ -994,7 +995,7 @@ button:focus {
   }
 
   .carts-img {
-    width: 356px;
+    width: 100%;
     height: 300px;
   }
 
