--- a/css/styles.css
+++ b/css/styles.css
@@ -239,11 +239,11 @@ button:focus {
   flex-wrap: wrap;
   row-gap: 72px;
   column-gap: 24px;
+  justify-content: center;
 }
 
 .cart_team {
   display: inline-flex;
-  flex-basis: 100%;
   padding-bottom: 0px;
   flex-direction: column;
   justify-content: center;
@@ -980,10 +980,6 @@ button:focus {
 
   /* Section 3 Our Team */
 
-  .cart_team {
-    flex-basis: calc((100% - 24px) / 2);
-  }
-
   /* Section  4 Our Portfolio */
 
   .portfolio-cart {
@@ -1109,10 +1105,6 @@ button:focus {
 
   .our-team {
     padding: 120px 0;
-  }
-
-  .cart_team {
-    flex-basis: calc((100% - 3 * 24px) / 4);
   }
 
   /* Section  4 Our Portfolio */
